cambios en imgs, sizes, carrusel y navbar

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -16,7 +16,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0" id="nav-fenix">
-    <a class="navbar-brand px-3 pt-5 pb-2 m-0 bg-light sombra mt-n5" href="#">
+    <a class="navbar-brand bg-light sombra" href="#carrusel">
       <img src="./img/logo-fenix.png" class="img-fluid" alt="">
     </a>
     <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbar"
@@ -25,16 +25,17 @@
     </button>
 
     <div class="collapse navbar-collapse flex-column ml-lg-0 px-2 bg-transparent" id="navbar">
-      <ul class="navbar-nav flex-row pl-2 mb-3 mr-auto">
+      <ul class="navbar-nav nav-rrss flex-row pl-2 mb-0 mr-auto">
         <li class="nav-item">
           <a class="nav-link px-1" href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
               class="fab fa-instagram-square text-success fa-2x"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-1" href="#"><i class="fab fa-facebook-square text-success fa-2x"></i></a>
+          <a class="nav-link px-1" href="https://www.facebook.com/farmacianuevasocial/"><i
+              class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
       </ul>
-      <ul class="navbar-nav w-100 nav-fill mt-lg-0 mb-4">
+      <ul class="navbar-nav w-100 nav-fill mt-lg-0 mb-2">
         <li class="nav-item">
           <a class="nav-link" href="#productos">PRODUCTOS <span class="sr-only">(current)</span></a>
         </li>
@@ -61,7 +62,7 @@
         </li>
       </ul>
     </div>
-    <div class="px-3 pt-5 pb-4 m-0 mt-n5 bg-primary text-center sombra">
+    <div class="px-3 pt-5 pb-3 m-0 mt-n5 bg-primary text-center sombra">
       <a href="#">
         <i class="fa fa-whatsapp fa-3x text-light mt-0"></i>
       </a>
@@ -191,7 +192,7 @@
           <h2 class="font-weight-bolder text-right">$ 250,50</h2>
           <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
         </div>
-      </div>        
+      </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
           <img src="./img/productos/prod-9.png" class="img-fluid p-4" alt="producto 9">
@@ -290,120 +291,65 @@
     </div>
     <div class="px-5">
       <h4 class="font-weight-bolder">¡LOS MEJORES PRODUCTOS SOLO PARA VOS!</h4>
-      <h5 hidden><a href="#" class="text-primary">Ver todos los productos <i class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
+      <h5 hidden><a href="#" class="text-primary">Ver todos los productos <i
+            class="fa fa-long-arrow-alt-right pl-1"></i></a></h5>
     </div>
     <div class="row m-5">
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-1.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-2.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-3.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-4.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
     </div>
     <div class="row m-5">
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-5.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-6.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-7.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card border-0 m-4">
+        <div class="card border-0 m-2">
           <div class="card-productos sombra">
-            <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
-            <a href="#" class="btn btn-danger btn-lg font-weight-bolder btn-oferta">-30%</a>
-          </div>
-          <div hidden>
-            <h2>Producto</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h2 class="font-weight-bolder text-right">$ 157,50</h2>
-            <a href="#" class="btn btn-block btn-primary">Agregar al Carrito</a>
+            <img src="./img/promociones/promo-8.png" class="img-fluid p-4" alt="producto 1">
           </div>
         </div>
       </div>
@@ -520,18 +466,18 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col mx-2">
           <a href="#" class="sucursal">
-            <img src="./img/suc.png" class="img-fluid p-4 sombra" alt="">
+            <img src="./img/suc.png" class="img-fluid sombra-2" alt="">
           </a>
           <a href="#" class="text-light font-weight-normal d-block mt-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
         </div>
-        <div class="col">
+        <div class="col mx-2">
           <a href="#" class="sucursal">
-            <img src="./img/suc.png" class="img-fluid p-4 sombra" alt="">
+            <img src="./img/suc.png" class="img-fluid sombra-2" alt="">
           </a>
           <a href="#" class="text-light font-weight-normal d-block mt-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
@@ -563,7 +509,8 @@
           </p>
           <p class="font-weight-normal text-justify">
             Al pasar los meses la farmacia empezó a crecer y de ahí la necesidad de
-            expandirse a otros puntos estratégicos de Villa Pueyrredón y el <b>25 de Septiembre de 1996</b> se inaugura la
+            expandirse a otros puntos estratégicos de Villa Pueyrredón y el <b>25 de Septiembre de 1996</b> se inaugura
+            la
             sucursal Nueva
             Social Fenix Griveo cita en la
             Av. José G. de Artigas 4901, para dar inicio a lo que hoy se conoce como la
@@ -618,7 +565,8 @@
         </form>
       </div>
       <div class="col-12 col-lg-6">
-        <img src="./img/cartero.png" style="position: absolute; height: 100%; right: -2px; bottom: 0;" class="mr-n5 mb-n5" alt="">
+        <img src="./img/cartero.png" style="position: absolute; height: 100%; right: -2px; bottom: 0;"
+          class="mr-n5 mb-n5" alt="">
       </div>
     </div>
   </section>
@@ -715,7 +663,8 @@
       <div class="px-5">
         <a href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
             class="fab fa-instagram-square text-light fa-2x"></i></a>
-        <a href="#"><i class="fab fa-facebook-square text-light fa-2x"></i></a>
+        <a href="https://www.facebook.com/farmacianuevasocial/"><i
+            class="fab fa-facebook-square text-light fa-2x"></i></a>
         <p class="text-white font-weight-normal d-inline-block pl-1" style="font-size: 13px; line-height: normal;">
           SEGUINOS EN
           <br>
