target blank a los links

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -31,7 +31,7 @@
               class="fab fa-instagram-square text-success fa-2x"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-1" href="https://www.facebook.com/farmacianuevasocial/"><i
+          <a class="nav-link px-1" href="https://www.facebook.com/farmacianuevasocial/" target="_blank"><i
               class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
       </ul>
@@ -63,7 +63,7 @@
       </ul>
     </div>
     <div class="px-3 pt-5 pb-3 m-0 mt-n5 bg-primary text-center sombra">
-      <a href="#">
+      <a href="https://wa.me/+/?text=Hola%20Mundo" target="_blank">
         <i class="fa fa-whatsapp fa-3x text-light mt-0"></i>
       </a>
     </div>
@@ -663,7 +663,7 @@
       <div class="px-5">
         <a href="https://www.instagram.com/farmacianuevasocial/" target="_blank"><i
             class="fab fa-instagram-square text-light fa-2x"></i></a>
-        <a href="https://www.facebook.com/farmacianuevasocial/"><i
+        <a href="https://www.facebook.com/farmacianuevasocial/" target="_blank"><i
             class="fab fa-facebook-square text-light fa-2x"></i></a>
         <p class="text-white font-weight-normal d-inline-block pl-1" style="font-size: 13px; line-height: normal;">
           SEGUINOS EN
