cambio en la card

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -491,12 +491,12 @@
             <div class="card-sucursal">
               <h1 class="text-light">Griveo</h1>
               <h3 class="text-light">Av. J. Artigas 4901, CABA</h3>
-              <!-- <h3 class="d-inline-block border-white pt-2 font-weight-light text-light"
+              <h3 class="d-inline-block border-white pt-2 font-weight-light text-light"
                 style="border-top: 3px solid white;">
                 Lunes a Viernes de
                 8 a
                 22 hs.</h3>
-              <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3> -->
+              <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3>
             </div>
           </a>
           <a href="#" class="text-light font-weight-normal d-block mt-5">
