cambios en anuncio covid y links de maps para sucursales

--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -453,6 +453,16 @@
         <div class="col-5">
           <img src="./img/covid/ministerio.jpg" alt="ministerio de salud" class="img-fluid float-right w-50 mt-4">
         </div>
+        <a href="tel:08002221002" class="btn bg-danger btn-block btn-lg p- m-5" id="tel-covid">
+          <h4 class="d-inline-block text-white p-4 mb-0">
+            Para más información comunicarse <br>
+            a este número de teléfono sin cargo.
+          </h4>
+          <h1 class="d-inline-block text-white mt-3 mb-0 p-1" style="line-height: 0px;">
+            <i class="fa fa-phone-alt"></i>
+            0800 222 1002 <span class="h6 text-white text-right d-block" style="line-height: 10px;">(opción 1)</span>
+          </h1>
+        </a>
       </div>
     </div>
   </section>
@@ -480,7 +490,7 @@
               <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3>
             </div>
           </a>
-          <a href="#" class="text-light font-weight-normal d-block mt-5">
+          <a href="https://goo.gl/maps/PQEUZ6gQ3uwG6MGg7" class="text-light font-weight-normal d-block m-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
@@ -499,7 +509,7 @@
               <h3 class="font-weight-light text-light">Sábados de 8 a 21 hs.</h3>
             </div>
           </a>
-          <a href="#" class="text-light font-weight-normal d-block mt-5">
+          <a href="https://goo.gl/maps/4YTtEnQLKko27tVA6" class="text-light font-weight-normal d-block m-5">
             <i class="fa fa-map-marker-alt fa-2x"> </i>
             <span class="h4 text-light pl-2"><u>Ver Mapa</u></span>
           </a>
