--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -5,10 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Farmacia Nueva Fenix</title>
+  <!-- Favicon -->
+
+  <link rel="icon" sizes="48x48" href="./img/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon/android-chrome-512x512.png">
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <!-- Slick -->
   <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/slick-theme.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./css/main.css">
+  <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/501bae068b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -17,7 +29,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0" id="nav-fenix">
     <a class="navbar-brand bg-light sombra" href="#carrusel">
-      <img src="./img/logo-fenix.png" class="img-fluid" alt="">
+      <img src="./img/logo-fenix.png" class="img-fluid" alt="logo fenix">
     </a>
     <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbar"
       aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +47,7 @@
               class="fab fa-facebook-square text-success fa-2x"></i></a>
         </li>
       </ul>
-      <ul class="navbar-nav w-100 nav-fill mt-lg-0 mb-2">
+      <ul class="navbar-nav w-100 nav-fill mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="#productos">PRODUCTOS <span class="sr-only">(current)</span></a>
         </li>
