--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -27,7 +27,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0" id="nav-fenix">
+  <nav class="navbar navbar-expand-lg sticky-top px-4 pt-0 mb-3" id="nav-fenix">
     <a class="navbar-brand bg-light sombra" href="#carrusel">
       <img src="./img/logo-fenix.png" class="img-fluid" alt="logo fenix">
     </a>
@@ -116,10 +116,10 @@
     <div class="label bg-farma">
       <h2 class="text-white text-center font-weight-bolder">PRODUCTOS</h2>
     </div>
-    <div class="m-5 carru-prod">
+    <div class="m-4 carru-prod">
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-1.png" class="img-fluid p-4" alt="producto 1">
+          <img src="./img/productos/prod-1.png" class="img-fluid p-3" alt="producto 1">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -130,7 +130,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-2.png" class="img-fluid p-4" alt="producto 2">
+          <img src="./img/productos/prod-2.png" class="img-fluid p-3" alt="producto 2">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -141,7 +141,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-3.png" class="img-fluid p-4" alt="producto 3">
+          <img src="./img/productos/prod-3.png" class="img-fluid p-3" alt="producto 3">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -152,7 +152,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-4.png" class="img-fluid p-4" alt="producto 4">
+          <img src="./img/productos/prod-4.png" class="img-fluid p-3" alt="producto 4">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -163,7 +163,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-5.png" class="img-fluid p-4" alt="producto 5">
+          <img src="./img/productos/prod-5.png" class="img-fluid p-3" alt="producto 5">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -174,7 +174,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-6.png" class="img-fluid p-4" alt="producto 6">
+          <img src="./img/productos/prod-6.png" class="img-fluid p-3" alt="producto 6">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -185,7 +185,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-7.png" class="img-fluid p-4" alt="producto 7">
+          <img src="./img/productos/prod-7.png" class="img-fluid p-3" alt="producto 7">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -196,7 +196,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-8.png" class="img-fluid p-4" alt="producto 8">
+          <img src="./img/productos/prod-8.png" class="img-fluid p-3" alt="producto 8">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -207,7 +207,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-9.png" class="img-fluid p-4" alt="producto 9">
+          <img src="./img/productos/prod-9.png" class="img-fluid p-3" alt="producto 9">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -218,7 +218,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-10.png" class="img-fluid p-4" alt="producto 10">
+          <img src="./img/productos/prod-10.png" class="img-fluid p-3" alt="producto 10">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -229,7 +229,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-11.png" class="img-fluid p-4" alt="producto 11">
+          <img src="./img/productos/prod-11.png" class="img-fluid p-3" alt="producto 11">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -240,7 +240,7 @@
       </div>
       <div class="card border-0 m-4">
         <div class="card-productos sombra">
-          <img src="./img/productos/prod-12.png" class="img-fluid p-4" alt="producto 12">
+          <img src="./img/productos/prod-12.png" class="img-fluid p-3" alt="producto 12">
         </div>
         <div hidden>
           <h2>Producto</h2>
@@ -403,7 +403,7 @@
   <!-- covid-19 -->
   <section id="covid">
     <div class="row">
-      <div class=" col-6 p-5">
+      <div class=" col-6 p-4">
         <h3 class="btn btn-gris btn-lg">COVID-19</h3>
         <h1>Tips para cuidarnos</h1>
         <p class="font-weight-bolder my-4">¡En Nueva Social Fénix nos cuidamos entre todos!</p>
@@ -419,46 +419,46 @@
         <img src="./img/covid/covid.png" alt="imagen salir de casa con tapabocas" class="img-tapabocas">
       </div>
       <div class="container-fluid">
-        <div class="row justify-content-center text-center px-5">
-          <div class="col-2">
+        <div class="row justify-content-center text-center px-4">
+          <div class="col">
             <img src="./img/covid/covid-1.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-normal px-4">Lavarse las manos con jabón regularmente.</p>
+            <p class="font-weight-normal px-2">Lavarse las manos con jabón regularmente.</p>
           </div>
-          <div class="col-2">
+          <div class="col">
             <img src="./img/covid/covid-2.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-normal px-4">Estornudar en el pliegue del codo.</p>
+            <p class="font-weight-normal px-2">Estornudar en el pliegue del codo.</p>
           </div>
-          <div class="col-2">
+          <div class="col">
             <img src="./img/covid/covid-3.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-normal px-4">No lavarse las manos a los ojos y la nariz.</p>
+            <p class="font-weight-normal px-2">No lavarse las manos a los ojos y la nariz.</p>
           </div>
-          <div class="col-2">
+          <div class="col">
             <img src="./img/covid/covid-4.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-normal px-4">Ventilar los ambientes.</p>
+            <p class="font-weight-normal px-2">Ventilar los ambientes.</p>
           </div>
-          <div class="col-2">
+          <div class="col">
             <img src="./img/covid/covid-5.png" alt="imagen covid" class="img-fluid img-covid">
-            <p class="font-weight-normal px-4">Desinfectar los objetos que se usan con frecuencia.</p>
+            <p class="font-weight-normal px-2">Desinfectar los objetos que se usan con frecuencia.</p>
           </div>
         </div>
-        <div class="row border-covid justify-content-center text-center mt-4">
-          <div class="col-3">
+        <div class="row border-covid justify-content-center text-center m-4">
+          <div class="col-4">
             <img src="./img/covid/covid-6.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-normal px-4">Fiebre y tos.</p>
+            <p class="font-weight-normal px-2">Fiebre y tos.</p>
           </div>
-          <div class="col-3">
+          <div class="col-4">
             <img src="./img/covid/covid-7.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-normal px-4">Fiebre y dolor de garganta.</p>
+            <p class="font-weight-normal px-2">Fiebre y dolor de garganta.</p>
           </div>
-          <div class="col-3">
+          <div class="col-4">
             <img src="./img/covid/covid-8.png" alt="imagen covid" class="img-fluid img-covid2">
-            <p class="font-weight-normal px-4">Fiebre y dificultad para respirar.</p>
+            <p class="font-weight-normal px-2">Fiebre y dificultad para respirar.</p>
           </div>
         </div>
       </div>
       <div class="row justify-content-center mt-4 px-5">
         <div class="col-7">
-          <h5 class="mt-5">Si tenés alguno de estos síntomas o en contacto con
+          <h5 class="mt-4">Si tenés alguno de estos síntomas o en contacto con
             algún caso confirmado <b>no te automediques y consultá
               inmediatamente al sistema de salud.</b></h5>
         </div>
@@ -712,7 +712,7 @@
           <br>
           NUESTRAS REDES
         </p>
-        <p class="text-light font-weight-normal">
+        <p class="text-light font-weight-normal pr-5">
           © Copyright 2019. Todos los derechos reservados | Profasan sociedad anonima, Cuit 30708995904. Dirección
           fiscal Artigas 4901, CABA
           <a href="#" class="float-right">
