--- a/Fenix/index.html
+++ b/Fenix/index.html
@@ -74,7 +74,7 @@
         </li>
       </ul>
     </div>
-    <div class="px-3 pt-5 pb-3 m-0 mt-n5 bg-primary text-center sombra">
+    <div class="px-3 pt-5 pb-3 m-0 mt-n5 bg-primary text-center sombra" id="nav-etiqueta">
       <a href="https://wa.me/+/?text=Hola%20Mundo" target="_blank">
         <i class="fa fa-whatsapp fa-3x text-light mt-0"></i>
       </a>
@@ -273,8 +273,8 @@
           de nuestras dos sucursales sin costo alguno. El horario de
           recepción de pedidos es de 8 a 19 hs.
         </p>
-        <h3 class="btn btn-lg btn-dark rounded-pill p-2 btn-envios">
-          <i class="fa fa-headset fa-round"></i>
+        <h3 class="btn btn-lg btn-dark rounded-pill btn-envios p-2 pr-3">
+          <i class="fa fa-headset fa-round mr-2"></i>
           0800-666-1234
         </h3>
         <br>
@@ -285,7 +285,9 @@
         <br>
         <h3 class="btn btn-lg btn-dark rounded-pill p-2 btn-envios">
           <i class="fa fa-envelope fa-round"></i>
-          pedidos@socialfenix.com.ar
+          <a href="mailto:pedidos@nuevasolcialfenix.com.ar" class="text-white px-2">
+            pedidos@nuevasocialfenix.com.ar
+          </a>
         </h3>
       </div>
       <div class="col-12 col-lg-5 p-5">
@@ -561,7 +563,7 @@
         </div>
       </div>
       <div class="col-12 offset-1 col-lg-5">
-        <img src="./img/fenix.png" class="mb-4" alt="">
+        <img src="./img/fenix.png" class="mb-4 img-fluid" alt="logo nueva social fenix">
         <div class="px-3 my-4" style="border-left: solid 3px #000;">
           <h3 class="text-success"><i class="fas fa-square fa-xs"></i> Visión</h3>
           <p class="font-weight-normal text-justify">
