--- a/bac-template/login.html
+++ b/bac-template/login.html
@@ -59,6 +59,12 @@
                   <i class="fa fa-address-book fa-fw"></i> <span class="">CONTACTO</span>
                 </a>
               </li>
+              <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-4s">
+                  <a class="nav-link pl-0 dropdown-toggle" href="./sales.html">
+                      <i class="fa fa-gifts fa-fw"></i>
+                      <span class="">OFERTAS</span>
+                  </a>
+              </li>
               <li class="nav-item active wow animate__fadeInLeft animate__fast animate__delay-3s">
                 <a class="nav-link pl-0" href="./contact.html">
                   <i class="fa fa-users fa-fw"></i> <span class="font-weight-bolder">LOGIN</span>
