--- a/bac-template/products-a/product-1.html
+++ b/bac-template/products-a/product-1.html
@@ -44,7 +44,7 @@
                 <a class="nav-link pl-0" href="../"><i class="fa fa-home fa-fw"></i> <span class="">HOME</span></a>
               </li>
               <li class="nav-item active wow animate__fadeInLeft animate__fast animate__delay-1s">
-                <a class="nav-link pl-0 dropdown-toggle" href="/categories.html">
+                <a class="nav-link pl-0 dropdown-toggle" href="../categories.html">
                   <i class="fa fa-cart-plus fa-fw"></i> <span class="">PRODUCTOS</span>
                 </a>
                 <div class="collapse show" id="categories">
@@ -72,6 +72,12 @@
               <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-3s">
                 <a class="nav-link pl-0" href="../contact.html"><i class="fa fa-address-book fa-fw"></i> <span
                     class="">CONTACTO</span></a>
+              </li>
+              <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-4s">
+                  <a class="nav-link pl-0 dropdown-toggle" href="../sales.html">
+                      <i class="fa fa-gifts fa-fw"></i>
+                      <span class="">OFERTAS</span>
+                  </a>
               </li>
             </ul>
           </div>
@@ -119,7 +125,7 @@
             <img class="img-fluid border-success" src="../img/category-A/product-1.jpg" alt="carousel product A">
           </div>
         </section>
-        <section class="container my-3 flex-grow-1 wow animate__fadeIn animate__delay-2s">
+        <section class="container my-3 flex-grow-1 wow animate__fadeIn animate__delay-3s">
           <div class="row">
             <div class="col-lg-4 col-md-5 col-sm-12 wow animate__fadeInLeft animate__delay-4s">
               <h5 class="btn btn-lg btn-block btn-success">Specs: A</h5>
@@ -128,7 +134,7 @@
               <h5 class="btn btn-lg btn-block btn-success">Specs: D</h5>
               <h5 class="btn btn-lg btn-block btn-success">Specs: E</h5>
             </div>
-            <div class="col-lg-8 col-md-7 col-sm-12 wow animate__fadeInLeft px-4">
+            <div class="col-lg-8 col-md-7 col-sm-12 wow animate__fadeInRight animate__slow px-4">
               <h3 class="title">Producto A</h3>
               <h5>Description:</h5>
               <p>
@@ -136,9 +142,10 @@
                 labore cum veritatis iure fugiat hic consequuntur rerum, harum est temporibus non eius magnam rem
                 voluptate tenetur!
               </p>
+              <h5 class="btn btn-lg btn-block btn-success">Link Del Producto</h5>
             </div>
           </div>
-          <div class="my-4">
+          <div class="my-4 wow animate__fadeInUp animate__delay-5s">
             <h5>Resumen:</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque repudiandae distinctio inventore eligendi
