--- a/bac-template/contact.html
+++ b/bac-template/contact.html
@@ -58,6 +58,12 @@
                   <i class="fa fa-address-book fa-fw"></i> <span class="">CONTACTO</span>
                 </a>
               </li>
+              <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-4s">
+                  <a class="nav-link pl-0 dropdown-toggle" href="./sales.html">
+                      <i class="fa fa-gifts fa-fw"></i>
+                      <span class="">OFERTAS</span>
+                  </a>
+              </li>
             </ul>
           </div>
           <div class=" w-100" id="social-nav">
